<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonLowToHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_to_high" />

        <RadioButton
            android:id="@+id/radioButtonHighToLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_to_low" />
    </RadioGroup>

    <Button
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply" />

</LinearLayout>
